# genai_api

./: .env  .gitignore  dockerfile  exper.ipynb  pyproject.toml
app/: main.py
app/core/: security.py  settings.py
app/db/: client.py  collections.py
app/dependencies/: auth.py
app/models/: chats.py  users.py
app/routes/: auth.py  chat.py
app/services/: authservices.py  dbservices.py  llmservices.py  ragservices.py
app/utils/: groq.py  loadpdf.py  tools.py
