[project]
name = "genai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt[standard]>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.41.0",
]
